# ariel-os-template

./: Cargo.toml  cargo-generate.toml  laze-project.yml
.github/: README.md
src/: lib.rs
