[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
{% if crate_type == "lib" %}
[lib]
harness = false
{% endif %}
[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
{% if crate_type == "lib" %}
[dev-dependencies]
embedded-test = { version = "0.6.0", features = ["ariel-os"] }
{% endif %}
